# modele

./: .pre-commit-config.yaml  Makefile  bootstrap.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml
