[tool.poetry]
name = "modele"
version = "0.1.0"
description = "modele"
authors = ["Kim, Andrew <andrewkimka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.9.0"
ruff = ">=0.4.4"
coverage = { version = ">=6.5.0", extras = ["toml"] }

[tool.coverage.run]
branch = true
source = ["modele"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.mypy]
files = ["modele", "tests"]
cache_dir = "${HOME}/.mypy_cache"
ignore_errors = false
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["modele"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
  "D",   # pydocstyle
  "PL",  # pylint-like
  "C90", # mccabe
]

lint.ignore = []

exclude = ["tests/data", ".venv", "build", "dist"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"
