[project]
name = "modele"
version = "0.1.0"
description = "modele"
authors = [
    {name = "Kim, Andrew", email = "andrewkimka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "mypy>=1.16.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a24",
]

[tool.coverage.run]
branch = true
source = ["modele"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["modele"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

lint.select = [
    "B",    # bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # pyflakes
    "FLY",  # f-strings
    "I",    # isort
    "PERF", # performance
    "PL",   # pylint-like
    "PTH",  # pathlib
    "RUF",  # ruff-specific
    "SIM",  # simplify
    "UP",   # pyupgrade
]

lint.ignore = []

exclude = ["tests/data", ".venv", "build", "dist"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
